--- a/Home/templates/home/H_page.html
+++ b/Home/templates/home/H_page.html
@@ -92,7 +92,8 @@
         <!-- ITEMS -->
         <div class="flex items-center justify-evenly lg:justify-between flex-wrap mt-10 gap-x-8 gap-y-6">
             {% for item in cat %}
-                <a href="#" class="flex flex-col items-center hover:-translate-y-3 transition duration-300">
+                <a href="{% url 'products:category_products' slug=item.slug %}"
+                   class="flex flex-col items-center hover:-translate-y-3 transition duration-300">
                     <img src="{{ item.image.url }}"
                          class="w-[100px] h-[100px] lg:w-[200px] lg:h-[200px] object-cover rounded-xl"
                          alt="{{ item.name }}">
@@ -141,12 +142,13 @@
                         {% endif %}
 
                         <!-- PRODUCT IMAGE -->
-                        <img src="{{ item.image.url }}" alt="{{ item.name }}"
-                             class="group-hover:scale-105 duration-300 w-32 h-32 lg:w-48 lg:h-48 mx-auto mb-3"/>
+                        <a href="{% url 'products:detail_products' slug=item.slug %}"><img src="{{ item.image.url }}"
+                                                                                           alt="{{ item.name }}"
+                                                                                           class="group-hover:scale-105 duration-300 w-32 h-32 lg:w-48 lg:h-48 mx-auto mb-3"/></a>
 
                         <!-- PRODUCT MAIN -->
                         <div class="px-2 lg:px-4 mb-3">
-                            <a href=""
+                            <a href="{% url 'products:detail_products' slug=item.slug %}" {# arsal be detail page  #}
                                class="line-clamp-1 font-DanaMedium mb-2 text-sm lg:text-base">
                                 {{ item.name }}
                             </a>
@@ -219,23 +221,24 @@
                         {% endif %}
 
                         <!-- PRODUCT IMAGE -->
-                        <img src="{{ product.image.url }}" alt="{{ product.name }}"
-                             class="group-hover:scale-105 duration-300 w-32 h-32 lg:w-48 lg:h-48 mx-auto mb-3"/>
+                        <a href="{% url 'products:detail_products' slug=product.slug %}"><img
+                                src="{{ product.image.url }}" alt="{{ product.name }}"
+                                class="group-hover:scale-105 duration-300 w-32 h-32 lg:w-48 lg:h-48 mx-auto mb-3"/></a>
 
                         <!-- PRODUCT MAIN -->
                         <div class="px-2 lg:px-4 mb-3">
-                            <a href=""
-                               class="line-clamp-2 font-DanaMedium mb-2 text-sm lg:text-base">
+                            <a href="{% url 'products:detail_products' slug=product.slug %}"
+                               class="line-clamp-1 font-DanaMedium mb-2 text-sm lg:text-base">
                                 {{ product.name }}
                             </a>
                             <div class="flex items-center gap-x-1 lg:gap-x-3">
                                 <p class="font-DanaDemiBold text-green-600 dark:text-green-500">
-                                    {{ product.discount_price|floatformat:0 }}
+                                    {{ product.discount_price|floatformat:0 | intcomma }}
                                     <span class="font-Dana text-sm">تومان</span>
                                 </p>
                                 {% if product.price > product.discount_price %}
                                     <del class="font-Dana text-xs lg:text-sm text-rose-300 hidden lg:inline">
-                                        {{ product.price|floatformat:0 }}
+                                        {{ product.price|floatformat:0 | intcomma }}
                                         <span class="">تومان</span>
                                     </del>
                                 {% endif %}
