--- a/Template/include/head_reference.html
+++ b/Template/include/head_reference.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'styles/form_style.css' %}"/>
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -18,6 +19,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="{% static 'scripts/App.js' %}" defer></script>
+
     <script type="text/javascript">
         if (
             localStorage.theme === "dark" ||
