--- a/Template/include/footer.html
+++ b/Template/include/footer.html
@@ -29,8 +29,9 @@
             <div class="flex flex-col gap-y-2 w-full lg:w-[30%]">
                 <!-- LOGO -->
                 <a href="{% url 'home:main' %}" class="text-green-500 transition-colors w-fit block">
-                    <p class="font-MorabbaBold text-3xl">کافی تِن</p>
-                    <p class="tracking-tighter">حس نو با قهوه...</p>
+{#                    <p class="font-MorabbaBold text-3xl">کافی تِن</p>#}
+{#                    <p class="tracking-tighter">حس نو با قهوه...</p>#}
+                    <img src="{% static 'Images/FLOG.png' %}">
                 </a>
                 <!-- ABOUTE -->
                 <p class="leading-8">
@@ -66,7 +67,7 @@
                         <use href="#map"></use>
                     </svg>
                     <p class="line-clamp-1">
-                        بلوار آزادی، خیابان استاد معین، کوچه گلستان، پلاک ۱۰
+                        نبش دستغیب 10
                     </p>
                 </div>
 
@@ -82,18 +83,18 @@
                             <svg class="w-5 h-5">
                                 <use href="#phone"></use>
                             </svg>
-                            <p>0923-122-3311</p>
-                            <p class="mr-2">0926-002-2737</p>
+                            <p>0915-693-9353</p>
+                            <p class="mr-2">0935-982-3315</p>
                         </span>
                 </div>
 
                 <div class="flex items-start justify-start gap-x-10">
                     <button class="flex items-center gap-x-2">
-                        <p dir="ltr">@CoffeeTenMSH</p>
+                        <p dir="ltr">@10_takeaway</p>
                         <img src="{% static 'Images/svg/instagram.png' %}" class="w-6 h-6" alt="instagram"/>
                     </button>
                     <button class="flex items-center gap-x-2">
-                        <p dir="ltr">@CoffeeTenMSH</p>
+                        <p dir="ltr">@10_takeaway</p>
                         <img src="{% static 'Images/svg/telegram.png' %}" class="w-6 h-6" alt="telegram"/>
                     </button>
                 </div>
