--- a/Products/templates/products/product_detail.html
+++ b/Products/templates/products/product_detail.html
@@ -16,7 +16,7 @@
                     </svg>
                 </li>
                 <li class="flex items-center gap-x-2">
-                    <a href="index.html"> فروشگاه</a>
+                    <a href="{% url 'products:shop' %}"> فروشگاه</a>
                     <svg class="w-4 h-4">
                         <use href="#chevron-left"></use>
                     </svg>
